ngx stripe payment added

--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -2,24 +2,27 @@
 
     <mat-horizontal-stepper [linear]="isLinear" #stepper>
 
-        <mat-step [stepControl]="firstFormGroup" label="Payment" [editable]="isEditable">
-            <form [formGroup]="firstFormGroup">
-                <ng-template matStepLabel>Step 1</ng-template>
-                <div>PAGO</div>
-                <button mat-button matStepperNext color="primary">Next</button>
+        <mat-step label="Payment" [editable]="isEditable">
+
+            <form novalidate (ngSubmit)="buy()" [formGroup]="stripeTest">
+                <input type="text" formControlName="name" placeholder="Name & last name">
+                <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
+                <button type="submit" mat-button matStepperNext color="primary">
+                  Next
+                </button>
             </form>
 
         </mat-step>
 
-        <mat-step [stepControl]="secondFormGroup" label="summary" [editable]="isEditable">
+        <mat-step label="summary" [editable]="isEditable">
 
             <ng-template matStepLabel>Step 2</ng-template>
             <div class="">
 
                 <h1>Payment Detail</h1>
-                <h3>Name: </h3>
-                <h3>Price: </h3>
-                <h3>Reservation Code: </h3>
+                <h3>Name: {{booked.name}} </h3>
+                <h3>Price: {{booked.price}} </h3>
+                <h3>Reservation Code: {{booked.locator}} </h3>
 
             </div>
 
@@ -30,7 +33,7 @@
 
         <mat-step label="done" [editable]="isEditable">
             <ng-template matStepLabel>Done</ng-template>
-            <h1>Info Message</h1>
+            <h1>{{successMessage}}</h1>
         </mat-step>
     </mat-horizontal-stepper>
 
